# fuel-consumption-analysis

./: LICENSE.txt  README.md  TOTURIAL.ipynb  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md  TOTURIAL-checkpoint.ipynb
.spyproject/config/backups/: workspace.ini.bak
.virtual_documents/: TOTURIAL.ipynb
src/fuel_consumption_analysis/: __about__.py  __init__.py  data_analysis.py  data_cleaning.py  data_visualization.py
