[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fuel-consumption-analysis"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Masoumeh-Davoudi", email = "masoumedavoudi99@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Masoumeh-Davoudi/fuel-consumption-analysis#readme"
Issues = "https://github.com/Masoumeh-Davoudi/fuel-consumption-analysis/issues"
Source = "https://github.com/Masoumeh-Davoudi/fuel-consumption-analysis"

[tool.hatch.version]
path = "src/fuel_consumption_analysis/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/fuel_consumption_analysis tests}"

[tool.coverage.run]
source_pkgs = ["fuel_consumption_analysis", "tests"]
branch = true
parallel = true
omit = [
  "src/fuel_consumption_analysis/__about__.py",
]

[tool.coverage.paths]
fuel_consumption_analysis = ["src/fuel_consumption_analysis", "*/fuel-consumption-analysis/src/fuel_consumption_analysis"]
tests = ["tests", "*/fuel-consumption-analysis/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
